# desktop-framework-zizon-benchmark

./: .gitignore
apps/01-electron/: index.html  package-lock.json  package.json  vite.config.ts
apps/01-electron/electron/: main.ts  preload.ts  tsconfig.json
apps/01-electron/src/: App.tsx
apps/01-electron/src/hooks/: useSystemData.ts
apps/02-tauri/: index.html  package-lock.json  package.json  vite.config.ts
apps/02-tauri/src/: App.tsx  main.tsx
apps/02-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/02-tauri/src-tauri/src/: lib.rs  main.rs
apps/03-wails/: app.go  go.mod  main.go  wails.json
apps/03-wails/frontend/: index.html  package-lock.json  package.json
apps/03-wails/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
apps/04-fyne/: go.mod  go.sum  main.go
apps/04-fyne/monitor/: monitor_test.go  ring.go  service.go
apps/04-fyne/ui/: chart.go  dashboard.go  donut.go
apps/05-ice/: Cargo.toml
apps/05-ice/src/: chart.rs  main.rs
apps/07-kotlin-compose/: build.gradle.kts  settings.gradle.kts
apps/07-kotlin-compose/src/main/kotlin/com/monitor/: main.kt
apps/07-kotlin-compose/src/main/kotlin/com/monitor/viewmodel/: MonitorViewModel.kt
apps/07-kotlin-compose/src/test/kotlin/com/monitor/viewmodel/: MonitorViewModelTest.kt
apps/08-javafx/: .gitignore  build.gradle.kts  settings.gradle.kts
apps/08-javafx/src/main/java/: module-info.java
apps/08-javafx/src/main/java/com/monitor/: Main.java
apps/08-javafx/src/main/java/com/monitor/view/: DashboardView.java
apps/08-javafx/src/main/java/com/monitor/viewmodel/: SystemViewModel.java
